# QT-Labs

Converter/: converter.cpp  converter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Helpdesk/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  ticketdialog.cpp  ticketdialog.h  ticketdialog.ui
QuickPad/: mainwindow.cpp  mainwindow.h  mainwindow.ui
TypingTrainer/: .gitignore  CMakeLists.txt  keyboardwidget.cpp  keyboardwidget.h  lessonloader.cpp  lessonloader.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  textdisplaywidget.cpp  textdisplaywidget.h  textmodel.cpp  textmodel.h
TypingTrainer/lessons/: 01_home_row.txt  02_numbers_symbols.txt  03_common_words.txt  04_sentences.txt  05_cpp_code.txt  06_lorem_ipsum.txt
scoreboard/: CMakeLists.txt  game_state.cpp  game_state.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
